// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea component Should concat classname in props with Bulma classname 1`] = `
<textarea
  className="textarea other-class this-is-a-test"
/>
`;

exports[`Textarea component Should exist 1`] = `[Function]`;

exports[`Textarea component Should have a fixed size 1`] = `
<textarea
  className="textarea has-fixed-size"
/>
`;

exports[`Textarea component Should have textarea classname 1`] = `
<textarea
  className="textarea"
/>
`;

exports[`Textarea component Should support various states 1`] = `
<textarea
  className="textarea is-loading is-focused is-hovered"
/>
`;

exports[`Textarea component Should use inline styles 1`] = `
<textarea
  className="textarea"
  style={
    Object {
      "height": 250,
    }
  }
/>
`;
